@@ -1,3 +1,8 @@
+
+2005-08-14  Florian Boor  <florian.boor@kernelconcepts.de>
+
+	* doc/libschedule-docs.sgml, atd.c: Add documentaion.
+
 2005-08-01  Florian Boor  <florian.boor@kernelconcepts.de>
 
 	* doc/*, configure.ac, Makefile.am: Add documentation framework.
